--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ crossorigin="anonymous">
   <!-- Link Swiper's CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
+    <div class="product-list"></div>
 
 </head>
 <body>
@@ -33,66 +34,24 @@ crossorigin="anonymous">
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-link active" aria-current="page" href="#">асортимент</a>
-        <a class="nav-link" href="#">відгуки</a>
+        <a class="nav-link" href="./cart.html">корзина</a>
         <a class="nav-link" href="#">реєстрація</a>
       </div>
     </div>
   </div>
 </nav>
 <!-- Шапка сайту: назва, логотип, навігація -->
- <div class="swiper mySwiper">
-    <div class="swiper-wrapper">
-      <div class="swiper-slide">Slide 1 </div>
-      <div class="swiper-slide">Slide 2</div>
-      <div class="swiper-slide">Slide 3</div>
-      <div class="swiper-slide">Slide 4</div>
-      <div class="swiper-slide">Slide 5</div>
-      <div class="swiper-slide">Slide 6</div>
-      <div class="swiper-slide">Slide 7</div>
-      <div class="swiper-slide">Slide 8</div>
-      <div class="swiper-slide">Slide 9</div>
-    </div>
-    <div class="swiper-pagination"></div>
-  </div>
 
-  <!-- Swiper JS -->
-  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-
-  <!-- Initialize Swiper -->
-  <script>
-    var swiper = new Swiper(".mySwiper", {
-      direction: "vertical",
-      pagination: {
-        el: ".swiper-pagination",
-        clickable: true,
-      },
-    });
-  </script>
 </header>
 <main class="container">
-  <div class="product-list"></div>
+  <div class="products-list"></div>
 </main>
  <footer>
 
-            <div class="logo_footer">
-             <div class="github">
-            <img src="/src/img/Untitled-design-6-2-Mar-14-2023-06-08-28-7462-PM.webp" >
-          
-             </div >
-             <div class="discord" >
-            <img src="src/img/Untitled-design-6-2-Mar-14-2023-06-08-28-7462-PM.webp">
-             </div>
-             <div  class="tiktok">
-            <img src="src/img/Untitled-design-6-2-Mar-14-2023-06-08-28-7462-PM.webp">
-             </div>
-            </div>
-
-            <p></p>
-
+         
 
     </footer>
 
-   <script src="/src/main.js"></script>
 </body>
 </html>
 <!-- Підключення JS-файлу Bootstrap-->
@@ -100,7 +59,7 @@ crossorigin="anonymous">
 src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
 integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
 crossorigin="anonymous"></script>
-<script.src="main.js"></script>
+<script src="main.js"></script>
 <!-- Власні JS-файли -->
 
 </body>
