--- a/cart.html
+++ b/cart.html
@@ -25,17 +25,17 @@ crossorigin="anonymous">
 <body>
 <!-- Тіло: увесь вміст сторінки -->
 <header>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">головна</a>
+    <a class="navbar-brand" href="#"><img src="/img/image.png"class="logo"/></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="#">асортимент</a>
-        <a class="nav-link" href="#">відгуки</a>
-        <a class="nav-link" href="#">реєстрація</a>
+        <a class="nav-link " aria-current="page" href="index.html">Каталог товарів</a>
+        <a class="nav-link active" href="cart.html">Корзина</a>
+        
       </div>
     </div>
   </div>
