--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEw
 crossorigin="anonymous">
 <!-- Власні CSS-стилі -->
 <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 
 <meta charset="utf-8" />
   <title>Swiper demo</title>
@@ -27,14 +28,14 @@ crossorigin="anonymous">
 <header>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">головна</a>
+    <a class="navbar-brand" href="#"><img src="/img/image.png"class="logo"/></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="#">асортимент</a>
-        <a class="nav-link" href="./cart.html">корзина</a>
+        <a class="nav-link active" aria-current="page" href="#">Каталог товарів</a>
+        <a class="nav-link" href="./cart.html">Корзина</a>
         
       </div>
     </div>
