--- a/cart.html
+++ b/cart.html
@@ -27,7 +27,7 @@ crossorigin="anonymous">
 <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#"><img src="/img/image.png"class="logo"/></a>
+    <a class="navbar-brand" href="#"><img src="img/image.png"class="logo"/></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
